--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 		<script type="module" src="https://cdn.jsdelivr.net/gh/starfederation/datastar@v1.0.0-beta.11/bundles/datastar.js"></script>
   </head>
   <body 
-		data-signals="{ debug: true, foo: 'bar', bar: 'baz', nested: { foo: 'bar', bar: 'baz' } }"
+		data-signals="{ debug: false, foo: 'bar', bar: 'baz', nested: { foo: 'bar', bar: 'baz' } }"
 		data-on-load="@get('/clock')"
 	>
 
